<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <ImageView
        android:id="@+id/ivLock"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/ic_padlock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/login_fragment_tv_passwords_are_locked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/passwords_are_locked"
        android:textAlignment="center"
        android:textColor="@color/main_text_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/login_fragment_et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLock" />

    <EditText
        android:id="@+id/login_fragment_et_password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_note_item_shape"
        android:hint="@string/enter_passcode"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:theme="@style/NoteFragmentEditTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_fragment_tv_passwords_are_locked" />

    <TextView
        android:id="@+id/tv_wrongPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/wrong_password"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_fragment_et_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_shape"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/confirm"
        android:textColor="@color/main_text_color"
        android:elevation="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wrongPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>